add new route to create city
