# public/swagger.yaml
@@ -13,7 +13,7 @@ paths:
     get:
       tags:
         - Plans
-      summary: Get All Plans, filter by category or search, with pagination of 10 rows by default
+      summary: Get All Plans, filter by cityId or search, with pagination of 10 rows by default
       operationId: GetAllPlans
       parameters:
         - $ref: '#/components/parameters/CityIdParam'
@@ -562,7 +562,10 @@ paths:
                 "title": "San Francisco Day Tour",
                 "description": "A one-day tour exploring San Francisco's iconic sites.",
                 "images": ["https://dummyimage.com/390x265/2196F3/fff.png"],
-                "categoryId": "city-exploration",
+                "cities": [{
+                  "placeId": "google-place-id-sdfsd",
+                  "name": "Oakland, CA"
+                }],
                 "stops": [
                   {
                     "placeId": "stop-001",
@@ -598,6 +601,10 @@ paths:
                     "https://example.com/image1.jpg"
                   ],
                   "stopCount": 1,
+                  "cities": [{
+                    "placeId": "google-place-id-sdfsd",
+                    "name": "Oakland, CA"
+                  }],
                   "stops": [
                     {
                       "placeId": "place-id-sdfdsf",
@@ -613,10 +620,6 @@ paths:
                   "finishLocation":  [0, 0],
                   "distance": 0,
                   "duration": 0,
-                  "categoryId":  {
-                    "_id": "category-id-sdfsd",
-                    "name": "My first cat"
-                  },
                   "createdAt": "2025-10-03T21:27:45.420Z",
                   "updatedAt": "2025-10-03T21:27:45.420Z",
                 }
@@ -698,7 +701,10 @@ paths:
                 "title": "San Francisco Day Tour",
                 "description": "A one-day tour exploring San Francisco's iconic sites.",
                 "images": ["https://dummyimage.com/390x265/2196F3/fff.png"],
-                "categoryId": "city-exploration",
+                "cities": [{
+                  "placeId": "google-place-id-sdfsd",
+                  "name": "Oakland, CA"
+                }],
                 "stops": [
                   {
                     "placeId": "stop-001",
@@ -734,6 +740,10 @@ paths:
                     "https://example.com/image1.jpg"
                   ],
                   "stopCount": 1,
+                  "cities": [{
+                    "placeId": "google-place-id-sdfsd",
+                    "name": "Oakland, CA"
+                  }],
                   "stops": [
                     {
                       "placeId": "place-id-sdfdsf",
@@ -749,10 +759,6 @@ paths:
                   "finishLocation":  [0, 0],
                   "distance": 0,
                   "duration": 0,
-                  "categoryId":  {
-                    "_id": "category-id-sdfsd",
-                    "name": "My first cat"
-                  },
                   "createdAt": "2025-10-03T21:27:45.420Z",
                   "updatedAt": "2025-10-03T21:27:45.420Z",
                 }
@@ -884,6 +890,51 @@ paths:
           description: 'No Content'
           headers: {}
       deprecated: false
+  /account/cities:
+    post:
+      tags:
+        - Account
+      summary: Create new City
+      security:
+        - bearerAuth: []
+      operationId: CreateCity
+      parameters: []
+      requestBody:
+        description: ''
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AccountCityRequestBody'
+            example: |
+              {
+                "placeId": "place-id-sdfsd",
+                "name": "Oakland"
+              }
+        required: true
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              example: |
+                {
+                  "_id": "city-id-asdfsd",
+                  "placeId": "place-id-sdfsd",
+                  "name": "Oakland",
+                  "state": "California",
+                  "country": "United States",
+                  "imageURL": "http://example.com/oakland_city.jpg",
+                  "location": [37.8043, -122.2711],
+                  "viewport": {
+                    "low": [37.6317, -122.3558],
+                    "high": [37.8853, -122.1147]
+                  },
+                  "plans": 1,
+                  "createdAt": "2025-10-15T20:18:50.502Z",
+                  "updatedAt": "2025-10-15T20:28:29.754Z"
+                }
+          headers: {}
+      deprecated: false
 components:
   securitySchemes:
     bearerAuth:
@@ -952,8 +1003,6 @@ components:
       required:
         - title
         - description
-        - images
-        - categoryId
       type: object
       properties:
         title:
@@ -968,8 +1017,15 @@ components:
           type: string
         duration:
           type: string
-        categoryId:
-          type: string
+        cities:
+          type: array
+          items:
+            type: object
+            properties:
+              placeId:
+                type: string
+              name:
+                type: string
         stops:
           type: array
           items:
@@ -994,17 +1050,16 @@ components:
                   type: number
               sequence:
                 type: number
-    AccountCategoryRequestBody:
-      title: Category's Object
+    AccountCityRequestBody:
+      title: City's Object
       required:
+        - placeId
         - name
       type: object
       properties:
+        placeId:
+          type: string
         name:
-          type: string
-        description:
-          type: string
-        imageURL:
           type: string
   parameters:
     CityIdParam:
