# src/routes/account.ts
@@ -9,6 +9,7 @@ import {
   addBookmark,
   removeBookmark,
 } from '../controllers/account'
+import { createNewCity } from '../controllers/account/cities'
 
 const router = express.Router()
 
@@ -16,5 +17,7 @@ router.route('/plans/').get(fetchAllPlans).post(createNewPlan)
 router.route('/plans/:planId').get(fetchPlan).put(updatePlan).delete(deletePlan)
 router.route('/bookmarks').get(fetchAllBookmarkedPlans)
 router.route('/bookmarks/:planId').post(addBookmark).delete(removeBookmark)
+
+router.route('/cities').post(createNewCity)
 
 export default router
